[package]
name = "quiche-future-sys"
version = "0.1.0"
authors = ["Jun Ryoung Ju <junryoungju@gmail.com>"]
edition = "2018"

[lib]
name = "quiche_future_sys"
path = "lib.rs"
crate-type = ["staticlib"]

[dependencies]
log = "*"
quiche-future = { path = "../quiche-future" }
async-std = { version = "*", features = ["unstable"] }
futures = "*"
rand = "*"